<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="953dp"
        android:layout_height="220dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/startquiz"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintBounds" />

    <Button
        android:id="@+id/button5"
        android:layout_width="313dp"
        android:layout_height="217dp"
        android:background="@drawable/button_bg_rounded_green"
        android:onClick="changeToQuizQuestion"
        android:text="@string/yes"
        android:textColor="#FFFFFF"
        app:autoSizeTextType="uniform"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <Button
        android:id="@+id/button6"
        android:layout_width="292dp"
        android:layout_height="216dp"
        android:background="@drawable/button_bg_rounded"
        android:onClick="changeToMainView"
        android:text="@string/no"
        android:textColor="#FFFFFF"
        app:autoSizeTextType="uniform"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="VisualLintBounds" />
</androidx.constraintlayout.widget.ConstraintLayout>